fixed red stripe on event cards - wasn't fully overlapping border

--- a/sass/ui-components/_card.scss
+++ b/sass/ui-components/_card.scss
@@ -105,7 +105,11 @@ _(The inline style on the card element is for documentation purposes only)_
 		height: $space-quarter;
 		left: 0;
 		position: absolute;
-		top: -1px; // to overlap border
-		width: 100%;
+
+
+		// to overlap border
+		left: -1px;
+		right: -1px;
+		top: -1px;
 	}
 }
